--- a/Text Classification.ipynb
+++ b/Text Classification.ipynb
@@ -134,40 +134,76 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2024-01-23T10:05:29.562454Z",
      "start_time": "2024-01-23T10:04:52.078938Z"
     }
    },
    "id": "ccecb20dc47f7558",
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5b137a5cba9943f6"
+   "execution_count": 27
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Combine test data with predicted labels and ground truth labels\n",
-    "evaluation_data = pd.DataFrame({'ID': test_data['ID'], 'Predicted_Conference_Label': y_pred_test})\n",
-    "evaluation_data = pd.merge(evaluation_data, ground_truth_labels, on='ID')"
+    "# Random Forest with TF-IDF\n",
+    "rf_tfidf_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_tfidf_classifier.fit(X_train_tfidf, train_data['Conference'])\n",
+    "y_pred_test_rf_tfidf = rf_tfidf_classifier.predict(X_test_tfidf)\n",
+    "accuracy_rf_tfidf = accuracy_score(ground_truth_labels['Conference'], y_pred_test_rf_tfidf)\n",
+    "results.append({'Features': 'TF-IDF', 'Classifier': 'Random Forest', 'Accuracy': accuracy_rf_tfidf})"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-23T09:47:21.003435Z",
-     "start_time": "2024-01-23T09:47:20.980650Z"
+     "end_time": "2024-01-23T10:06:33.808057Z",
+     "start_time": "2024-01-23T10:05:42.921434Z"
+    }
+   },
+   "id": "5b137a5cba9943f6",
+   "execution_count": 28
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# SVM with Word2Vec\n",
+    "svm_word2vec_classifier = SVC(kernel='linear', C=1.0)\n",
+    "svm_word2vec_classifier.fit(X_train_word2vec, train_data['Conference'])\n",
+    "y_pred_test_svm_word2vec = svm_word2vec_classifier.predict(X_test_word2vec)\n",
+    "accuracy_svm_word2vec = accuracy_score(ground_truth_labels['Conference'], y_pred_test_svm_word2vec)\n",
+    "results.append({'Features': 'Word2Vec', 'Classifier': 'SVM', 'Accuracy': accuracy_svm_word2vec})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-23T10:07:44.118017Z",
+     "start_time": "2024-01-23T10:06:33.815370Z"
     }
    },
    "id": "bd7c172a4c154c32",
-   "execution_count": 7
+   "execution_count": 29
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Random Forest with Word2Vec\n",
+    "rf_word2vec_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_word2vec_classifier.fit(X_train_word2vec, train_data['Conference'])\n",
+    "y_pred_test_rf_word2vec = rf_word2vec_classifier.predict(X_test_word2vec)\n",
+    "accuracy_rf_word2vec = accuracy_score(ground_truth_labels['Conference'], y_pred_test_rf_word2vec)\n",
+    "results.append({'Features': 'Word2Vec', 'Classifier': 'Random Forest', 'Accuracy': accuracy_rf_word2vec})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-23T10:08:27.329481Z",
+     "start_time": "2024-01-23T10:07:44.118430Z"
+    }
+   },
+   "id": "71a437dbb15938dc",
+   "execution_count": 30
   },
   {
    "cell_type": "code",
@@ -176,24 +212,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on the test set: 0.8639193596205159\n"
+      "   Features     Classifier  Accuracy\n",
+      "0    TF-IDF            SVM  0.863919\n",
+      "1    TF-IDF  Random Forest  0.797806\n",
+      "2  Word2Vec            SVM  0.553810\n",
+      "3  Word2Vec  Random Forest  0.445301\n"
      ]
     }
    ],
    "source": [
-    "# Calculate accuracy\n",
-    "accuracy = (evaluation_data['Predicted_Conference_Label'] == evaluation_data['Conference']).mean()\n",
-    "print(f\"Accuracy on the test set: {accuracy}\")"
+    "# Create a DataFrame from the list of results\n",
+    "results_table = pd.DataFrame(results)\n",
+    "\n",
+    "# Display the results table\n",
+    "print(results_table)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-23T09:47:21.006600Z",
-     "start_time": "2024-01-23T09:47:20.998758Z"
+     "end_time": "2024-01-23T10:08:27.342798Z",
+     "start_time": "2024-01-23T10:08:27.337243Z"
     }
    },
-   "id": "71a437dbb15938dc",
-   "execution_count": 8
+   "id": "e52ea77e853ea955",
+   "execution_count": 31
   },
   {
    "cell_type": "markdown",
