--- a/Text Classification.ipynb
+++ b/Text Classification.ipynb
@@ -24,22 +24,23 @@
    "source": [
     "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.decomposition import PCA\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
     "from gensim.models import Word2Vec\n",
     "import numpy as np\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.manifold import TSNE"
    ],
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-23T09:58:01.950735Z",
-     "start_time": "2024-01-23T09:58:01.943663Z"
+     "end_time": "2024-01-23T10:22:44.414574Z",
+     "start_time": "2024-01-23T10:22:44.249481Z"
     }
    },
    "id": "initial_id",
-   "execution_count": 23
+   "execution_count": 32
   },
   {
    "cell_type": "code",
